# YaarScript-Client

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
app/: globals.css  layout.jsx  metaData.jsx  not-found.jsx  page.jsx  robots.jsx  sitemap.jsx
app/dd/: page.jsx
app/docs/: layout.jsx  page.jsx
app/editor/: layout.jsx  page.jsx
compiler/src/: error.rs  lib.rs  main.rs
compiler/src/core/: ast.rs  token.rs
compiler/src/lexer/: lexer.rs
compiler/src/semantics/: scope.rs
components/: CodeEditor.jsx  Footer.jsx  Navbar.jsx  Terminal.jsx
components/animations/: DelicateAsciiDots.jsx  NeuralGlow.jsx  ScrollVelocity.jsx
components/docs/: CodeBlock.jsx  DocSection.jsx  DocsContent.jsx  DocsSidebar.jsx
components/editor/: CodeEditor.jsx  EditorClient.jsx  Terminal.jsx
components/home/: FaultyTerminal.jsx  ScrollVelocity.jsx
components/home-page/: CTASection.jsx  CodePreview.jsx  FeaturesSection.jsx  HeroSection.jsx  HomeFooter.jsx  ScrollWordReveal.jsx  StatsSection.jsx
docs/: IR_OPTIMIZATION.md  PARSER.md  SCOPE_ANALYZER.md  TAC_GENERATION.md  TYPE_ANALYZER.md
pkg/: README.md  compiler.d.ts  compiler.js  compiler_bg.js  compiler_bg.wasm  compiler_bg.wasm.d.ts  package.json
src/: error.rs  lib.rs  main.rs
src/codegen/: execution.rs
src/ir_pipeline/: tac.rs  tac_optimizer.rs
src/lexer/: lexer.rs
src/parser/: ast_printer.rs  parser.rs
src/semantics/: type_checker.rs
yaar-script/: package.json
